--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "alurageek2",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Desenvolvido como parte do curso Oracle Next Education da Alura junto com a Oracle.\r E-commerce onde os usuarios podem colocar seus produtos e exclui-los.",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --watch ./database/db.json --port 3000"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^1.0.0-beta.0"
+  }
 }
